2011-12-30  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-resolve-references-for-sequence-type)
	(soap-resolve-references-for-array-type): hack to prevent self
	references, see Bug#9.
	(soap-parse-envelope): report the contents of the 'detail' node
	when receiving a fault reply.
	(soap-parse-envelope): report the contents of the entire 'detail'
	node.

2011-12-21  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-inspect.el (soap-sample-value-for-simple-type)
	(soap-inspect-simple-type): new function

	* soap-client.el (soap-simple-type): new struct
	(soap-default-xsd-types, soap-default-soapenc-types)
	(soap-decode-basic-type, soap-encode-basic-type): support
	unsignedInt and double basic types
	(soap-resolve-references-for-simple-type)
	(soap-parse-simple-type, soap-encode-simple-type): new function
	(soap-parse-schema): parse xsd:simpleType declarations

2011-11-02  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-default-xsd-types)
	(soap-default-soapenc-types): add integer, byte and anyURI types
	(soap-parse-complex-type-complex-content): use `soap-wk2l' to find
	the local name of "soapenc:Array"
	(soap-decode-basic-type, soap-encode-basic-type): support encoding
	decoding integer, byte and anyURI xsd types.

	* jira2.el (jira2-custom-field-value): new function

2011-03-05  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-namespace-put-link): check if the target
	name is fully qualified -- use only the name part.
	(soap-parse-complex-type, soap-parse-sequence): recognize xsd:all
	types, treated the same as xsd:sequence.

2011-02-16  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-well-known-xmlns, soap-local-xmlns)
	(soap-default-xmlns, soap-multi-refs, soap-decoded-multi-refs)
	(soap-current-wsdl, soap-encoded-namespaces): rename CL-style
	*...* variables.

2011-02-15  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-inspect.el: fixes suggested by `checkdoc', added Commentary
	sections
