@@ -1,3 +1,12 @@
+2012-12-19  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* soap-inspect.el (soap-sample-value-for-xs-complex-type): supply
+	sample values for choice types with a special tag
+
+	* soap-client.el (soap-encode-xs-complex-type): handle anonymous
+	elements correctly
+	(soap-encode-value): accept nodes that have no namespace tag
+
 2011-12-30  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* soap-client.el (soap-resolve-references-for-sequence-type)
